--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><title>Internal App</title></head>
+<head><title>Internal App</title>
+<meta name="google-site-verification" content="1M69pyowUJyiS4XoWnQ_F0HVW_UcKmogj0rk78cnWCc" />
+</head>
 <body>
     <h1>Personal Project: n8n</h1>
     <p>This is a private application for personal use only. It is not intended for public distribution.</p>
