Revise index.html for personal automation service
Updated the title and content to reflect the app's purpose as a personal automation service for Google Workspace data management.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head><title>Internal App</title>
-<meta name="google-site-verification" content="1M69pyowUJyiS4XoWnQ_F0HVW_UcKmogj0rk78cnWCc" />
+<head>
+    <title>Brian's Personal Automation Gateway</title>
+    <style>body { font-family: sans-serif; padding: 40px; line-height: 1.6; }</style>
 </head>
 <body>
-    <h1>Personal Project: n8n</h1>
-    <p>This is a private application for personal use only. It is not intended for public distribution.</p>
-    <nav>
-        <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a>
-    </nav>
+    <h1>Personal Automation Service</h1>
+    <p><strong>Application Purpose:</strong> This app provides a persistent OAuth bridge for my private n8n instance. It allows for the automated management of my personal Google Workspace data (Calendar/Drive) without the need for weekly manual re-authentication.</p>
+    
+    <p>This application is <strong>not</strong> intended for public use and is restricted to the owner's account only.</p>
+    
+    <hr>
+    <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a>
 </body>
 </html>
