Add app name to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Personal Automation Service</h1>
+    <h2>App Name: n8n-bpj</h2>
     <p><strong>Application Purpose:</strong> This app provides a persistent OAuth bridge for my private n8n instance. It allows for the automated management of my personal Google Workspace data (Calendar/Drive) without the need for weekly manual re-authentication.</p>
     
     <p>This application is <strong>not</strong> intended for public use and is restricted to the owner's account only.</p>
